logs/dag_id=dag_with_postgres_operator_v03/run_id=scheduled__2022-09-02T00:00:00+00:00/task_id=delete_data_from_table/attempt=1.log
[2022-09-05T21:05:01.879+0000] {taskinstance.py:1171} INFO - Dependencies all met for <TaskInstance: dag_with_postgres_operator_v03.delete_data_from_table scheduled__2022-09-02T00:00:00+00:00 [queued]>
[2022-09-05T21:05:01.898+0000] {taskinstance.py:1171} INFO - Dependencies all met for <TaskInstance: dag_with_postgres_operator_v03.delete_data_from_table scheduled__2022-09-02T00:00:00+00:00 [queued]>
[2022-09-05T21:05:01.898+0000] {taskinstance.py:1368} INFO - 
--------------------------------------------------------------------------------
[2022-09-05T21:05:01.899+0000] {taskinstance.py:1369} INFO - Starting attempt 1 of 6
[2022-09-05T21:05:01.899+0000] {taskinstance.py:1370} INFO - 
--------------------------------------------------------------------------------
[2022-09-05T21:05:01.923+0000] {taskinstance.py:1389} INFO - Executing <Task(PostgresOperator): delete_data_from_table> on 2022-09-02 00:00:00+00:00
[2022-09-05T21:05:01.933+0000] {standard_task_runner.py:52} INFO - Started process 11808 to run task
[2022-09-05T21:05:01.937+0000] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'dag_with_postgres_operator_v03', 'delete_data_from_table', 'scheduled__2022-09-02T00:00:00+00:00', '--job-id', '408', '--raw', '--subdir', 'DAGS_FOLDER/dag_with_postgres_operators.py', '--cfg-path', '/tmp/tmpafvrwvp6', '--error-file', '/tmp/tmpo6pf7fpx']
[2022-09-05T21:05:01.938+0000] {standard_task_runner.py:80} INFO - Job 408: Subtask delete_data_from_table
[2022-09-05T21:05:02.088+0000] {task_command.py:371} INFO - Running <TaskInstance: dag_with_postgres_operator_v03.delete_data_from_table scheduled__2022-09-02T00:00:00+00:00 [running]> on host c033faf33c57
[2022-09-05T21:05:02.248+0000] {taskinstance.py:1583} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=Ancordss
AIRFLOW_CTX_DAG_ID=dag_with_postgres_operator_v03
AIRFLOW_CTX_TASK_ID=delete_data_from_table
AIRFLOW_CTX_EXECUTION_DATE=2022-09-02T00:00:00+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2022-09-02T00:00:00+00:00
[2022-09-05T21:05:02.271+0000] {base.py:68} INFO - Using connection ID 'postgres_localhost' for task execution.
[2022-09-05T21:05:02.289+0000] {sql.py:315} INFO - Running statement: delete from dag_runs where dt =  ('2022-09-02' and dag_id = 'dag_with_postgres_operator_v03';), parameters: None
[2022-09-05T21:05:02.292+0000] {taskinstance.py:1902} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ";"
LINE 1: ...'2022-09-02' and dag_id = 'dag_with_postgres_operator_v03';)
                                                                     ^

[2022-09-05T21:05:02.319+0000] {taskinstance.py:1412} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_with_postgres_operator_v03, task_id=delete_data_from_table, execution_date=20220902T000000, start_date=20220905T210501, end_date=20220905T210502
[2022-09-05T21:05:02.340+0000] {standard_task_runner.py:97} ERROR - Failed to execute job 408 for task delete_data_from_table (syntax error at or near ";"
LINE 1: ...'2022-09-02' and dag_id = 'dag_with_postgres_operator_v03';)
                                                                     ^
; 11808)
[2022-09-05T21:05:02.404+0000] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-09-05T21:05:02.497+0000] {local_task_job.py:279} INFO - 0 downstream tasks scheduled from follow-on schedule check
